--- a/Client/create.html
+++ b/Client/create.html
@@ -1,118 +1,182 @@
 <!doctype html>
 <html lang="es">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Crear Nuevo Evento</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/daisyui@5"
+            rel="stylesheet"
+            type="text/css"
+        />
+        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crear Nuevo Evento</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-</head>
+    <body class="bg-gray-50 min-h-screen p-8">
+        <div class="max-w-xl mx-auto bg-white p-8 rounded-xl shadow-2xl">
+            <a
+                href="index.html"
+                class="inline-flex items-center text-primary hover:text-indigo-700 font-medium mb-6 transition duration-150"
+            >
+                <svg
+                    class="w-4 h-4 mr-1"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M10 19l-7-7m0 0l7-7m-7 7h18"
+                    ></path>
+                </svg>
+                Volver a Lista
+            </a>
 
-<body class="bg-gray-50 min-h-screen p-8">
-    <div class="max-w-xl mx-auto bg-white p-8 rounded-xl shadow-2xl">
-        <a href="index.html"
-            class="inline-flex items-center text-primary hover:text-indigo-700 font-medium mb-6 transition duration-150">
-            <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18">
-                </path>
-            </svg>
-            Volver a Lista
-        </a>
+            <h1 class="text-3xl font-bold text-gray-900 mb-6 border-b pb-3">
+                Crear Nuevo Evento
+            </h1>
 
-        <h1 class="text-3xl font-bold text-gray-900 mb-6 border-b pb-3">
-            Crear Nuevo Evento
-        </h1>
+            <form id="eventoForm" class="space-y-6">
+                <div>
+                    <label
+                        for="id"
+                        class="block text-sm font-medium text-gray-700"
+                        >Id:</label
+                    >
+                    <input
+                        type="text"
+                        id="id"
+                        required
+                        disabled
+                        class="mt-1 block w-full rounded-md border-gray-300 bg-gray-100 shadow-sm p-3 cursor-not-allowed"
+                        placeholder="Se generará automáticamente"
+                    />
+                </div>
 
-        <form id="eventoForm" class="space-y-6">
-            <div>
-                <label for="id" class="block text-sm font-medium text-gray-700">Id:</label>
-                <input type="text" id="id" required disabled
-                    class="mt-1 block w-full rounded-md border-gray-300 bg-gray-100 shadow-sm p-3 cursor-not-allowed"
-                    placeholder="Se generará automáticamente" />
-            </div>
+                <div>
+                    <label
+                        for="sedeId"
+                        class="block text-sm font-medium text-gray-700"
+                        >Sede:</label
+                    >
+                    <input
+                        type="text"
+                        id="sedeId"
+                        required
+                        disabled
+                        class="mt-1 block w-full rounded-md border-gray-300 bg-gray-100 shadow-sm p-3 cursor-not-allowed"
+                        placeholder="Se generará automáticamente"
+                    />
+                </div>
 
-            <div>
-                <label for="sedeId" class="block text-sm font-medium text-gray-700">Sede:</label>
-                <input type="text" id="sedeId" required disabled
-                    class="mt-1 block w-full rounded-md border-gray-300 bg-gray-100 shadow-sm p-3 cursor-not-allowed"
-                    placeholder="Se generará automáticamente" />
-            </div>
+                <div>
+                    <label
+                        for="identificacion"
+                        class="block text-sm font-medium text-gray-700"
+                        >Identificación:</label
+                    >
+                    <input
+                        type="text"
+                        id="identificacion"
+                        required
+                        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 p-3"
+                    />
+                </div>
 
-            <div>
-                <label for="identificacion" class="block text-sm font-medium text-gray-700">Identificación:</label>
-                <input type="text" id="identificacion" required
-                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 p-3" />
-            </div>
+                <div>
+                    <label
+                        for="nombre"
+                        class="block text-sm font-medium text-gray-700"
+                        >Nombre:</label
+                    >
+                    <input
+                        type="text"
+                        id="nombre"
+                        required
+                        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 p-3"
+                    />
+                </div>
 
-            <div>
-                <label for="nombre" class="block text-sm font-medium text-gray-700">Nombre:</label>
-                <input type="text" id="nombre" required
-                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 p-3" />
-            </div>
+                <div>
+                    <label
+                        for="fecha"
+                        class="block text-sm font-medium text-gray-700"
+                        >Fecha:</label
+                    >
+                    <input
+                        type="datetime-local"
+                        id="fecha"
+                        required
+                        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 p-3"
+                    />
+                </div>
+                <div>
+                    <label
+                        for="tipo"
+                        class="block text-sm font-medium text-gray-700"
+                        >Tipo:</label
+                    >
+                    <select
+                        name="tipo"
+                        id="tipo"
+                        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 p-3 bg-white"
+                    >
+                        <option value="Entrada">Entrada</option>
+                        <option value="Salida">Salida</option>
+                    </select>
+                </div>
 
-            <div>
-                <label for="fecha" class="block text-sm font-medium text-gray-700">Fecha:</label>
-                <input type="datetime-local" id="fecha" required
-                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 p-3" />
-            </div>
-            <div>
-                <label for="tipo" class="block text-sm font-medium text-gray-700">Tipo:</label>
-                <select name="tipo" id="tipo"
-                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 p-3 bg-white">
-                    <option value="Entrada">Entrada</option>
-                    <option value="Salida">Salida</option>
-                </select>
-            </div>
+                <div class="pt-4">
+                    <button
+                        type="submit"
+                        class="w-full bg-primary hover:bg-indigo-700 text-white font-semibold py-3 px-4 rounded-lg shadow-md transition duration-200 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2"
+                    >
+                        Guardar Evento
+                    </button>
+                </div>
+            </form>
+        </div>
 
-            <div class="pt-4">
-                <button type="submit"
-                    class="w-full bg-primary hover:bg-indigo-700 text-white font-semibold py-3 px-4 rounded-lg shadow-md transition duration-200 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2">
-                    Guardar Evento
-                </button>
-            </div>
-        </form>
-    </div>
+        <script type="module">
+            const SEDE_KEY = "sede";
+            import repository from "./src/repository.js";
 
-    <script type="module">
-        const SEDE_KEY = "sede";
-        import repository from "./src/repository.js";
+            document.getElementById("id").value = generateId();
+            document.getElementById("sedeId").value =
+                localStorage.getItem(SEDE_KEY);
 
-        document.getElementById("id").value = generateId();
-        document.getElementById("sedeId").value =
-            localStorage.getItem(SEDE_KEY);
+            document
+                .getElementById("eventoForm")
+                .addEventListener("submit", async (e) => {
+                    e.preventDefault();
 
-        document
-            .getElementById("eventoForm")
-            .addEventListener("submit", async (e) => {
-                e.preventDefault();
+                    const evento = {
+                        id: document.getElementById("id").value,
+                        identificacion:
+                            document.getElementById("identificacion").value,
+                        nombre: document.getElementById("nombre").value,
+                        fecha: document.getElementById("fecha").value,
+                        tipo: document.getElementById("tipo").value,
+                        estado: "Desincronizado",
+                        sedeId: localStorage.getItem(SEDE_KEY),
+                    };
 
-                const evento = {
-                    id: document.getElementById("id").value,
-                    identificacion:
-                        document.getElementById("identificacion").value,
-                    nombre: document.getElementById("nombre").value,
-                    fecha: document.getElementById("fecha").value,
-                    tipo: document.getElementById("tipo").value,
-                    estado: "Desincronizado",
-                    sedeId: localStorage.getItem(SEDE_KEY),
-                };
+                    try {
+                        await repository.addEventoAsync(evento);
+                        window.location.href = "index.html";
+                    } catch (error) {
+                        console.error("Error creando evento:", error);
+                    }
+                });
 
-                try {
-                    await repository.addEventoAsync(evento);
-                    window.location.href = "index.html";
-                } catch (error) {
-                    console.error("Error creando evento:", error);
-                }
-            });
-
-        function generateId() {
-            return (
-                "EVT-" + new Date().toISOString().replace(/[-:.TZ]/g, "")
-            );
-        }
-    </script>
-</body>
-
+            function generateId() {
+                return (
+                    "EVT-" + new Date().toISOString().replace(/[-:.TZ]/g, "")
+                );
+            }
+        </script>
+    </body>
 </html>
