--- a/client/login.html
+++ b/client/login.html
@@ -113,7 +113,7 @@
             const API_URL = "https://client-server-production-ee1e.up.railway.app";
             const TOKEN_KEY = "access-token";
             const SEDE_KEY = "sede";
-            const HOME_PAGE = "/index.html";
+            const HOME_PAGE = "index.html";
 
             const form = document.getElementById("loginForm");
             const errorMessage = document.getElementById("errorMessage");
